--- a/app/scss/_projects.scss
+++ b/app/scss/_projects.scss
@@ -1,7 +1,7 @@
 .projects {
   background-color: var(--clr-neutral-900);
   padding-block: var(--size-700);
-  overflow-x: hidden;
+  overflow: hidden;
 
   @include breakpoint-up(mobile-small) {
     padding-block: var(--size-800);
